# dreamcatcher

./: .gitignore  .json  Cargo.toml  Config.ts  ContractToolkit.ts  F.sol  FNode.sol  Main.java  README.md  bun.lockb  hardhat.config.cjs  index.ts  installed_packages.txt  package.json  styleguide  tailwind.config.js  tsconfig.json
app/: App.html  App.js  App.ts  App.tsx  Index.ts
code/: FixedPointArithmetic.ts
controller/: App.ts  State.json
dev-op/: app.ts  settings.ts
doka/: App.ts
dump/: AdaptorComponent.sol  Api3Adaptor.sol  Broker.sol  Command.sol  CommandCentre.sol  DefaultMappedEventEmitter.ts  Deployer.sol  Deposit.sol  DiamondProfilePage.tsx  DreamToken.sol  DynamicRoleb.sol  ERC20Shortcut.sol  Example.sol  Finance.sol  (+108 more)
dump/server/: .js  Cargo.toml  __init__.py  console.py
dump/server/catch/: WelloWorld.dream  interpreter.py
dump/server/catch/tools/: search.py
dump/server/catch/tools/harmony/: JsonSync.py  Stopwatch.py
dump/server/web3_engine/: __main__.py
dump/server/web3_engine/compiled/abi/: ConsoleFacet01.json
dump/server/web3_engine/compiled/bytecode/: ConsoleFacet01.json  Finance.json
dump/server/web3_engine/compiled/metadata/: ConsoleFacet01.json  Finance.json
dump/server/web3_engine/compiled/opcodes/: ConsoleFacet01.json  Finance.json
dump/server/web3_engine/compiled/raw/: ConsoleFacet01.json  Finance.json
dump/server/web3_engine/compiled/source_map/: ConsoleFacet01.json  Finance.json
dump/server/web3_engine/solcx/: __init__.py  exceptions.py  install.py  main.py  wrapper.py
dump/server/web3_engine/solcx/utils/: lock.py
(+2133 files in other folders)
