[package]
name = "your_project_name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add your dependencies here. For example:
# rand = "0.8.4"

[build-dependencies]
# Add build dependencies here if needed

[dev-dependencies]
# Add development dependencies here if needed

[features]
# Define features here if needed
